--- a/.github/workflows/rn-build.yml
+++ b/.github/workflows/rn-build.yml
@@ -30,8 +30,15 @@ jobs:
       
 
       # Runs a single command using the runners shell
-      - name: Run a on
+      - name: Create new react native project
         run: npx react-native init RNGithubAction
+        
+      - name: Make Gradlew Executable
+        run: cd android && chmod +x ./gradlew
+        
+      - name: Generate App APK
+        run: |
+          cd android && ./gradlew assembleRelease --no-daemon
 
 #       # Runs a set of commands using the runners shell
 #       - name: Run a multi-line script
