--- a/.github/workflows/rn-build.yml
+++ b/.github/workflows/rn-build.yml
@@ -34,11 +34,11 @@ jobs:
         run: npx react-native init RNGithubAction
         
       - name: Make Gradlew Executable
-        run: cd android && chmod +x ./gradlew
+        run: cd RNGithubAction && cd android && chmod +x ./gradlew
         
       - name: Generate App APK
         run: |
-          cd android && ./gradlew assembleRelease --no-daemon
+          cd RNGithubAction && cd android && ./gradlew assembleRelease --no-daemon
 
 #       # Runs a set of commands using the runners shell
 #       - name: Run a multi-line script
