--- a/.github/workflows/rn-build.yml
+++ b/.github/workflows/rn-build.yml
@@ -13,6 +13,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        rn_version: ['0.68.*', '0.67.*', '0.66.*', '0.65.*', '0.64.*', '0.63.*', '0.62.*', '0.61.*', '0.60.*']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,7 +38,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Create new react native project
-        run: npx react-native init RNGithubAction
+        run: npx react-native init RNGithubAction --version ${{ matrix.rn_version }}
         
       - name: Make Gradlew Executable
         run: cd $PROJECT_NAME && cd android && chmod +x ./gradlew
