--- a/.github/workflows/rn-build.yml
+++ b/.github/workflows/rn-build.yml
@@ -18,8 +18,8 @@ jobs:
       fail-fast: false
       matrix:
         rn_version: ['0.68.x', '0.67.x', '0.66.x', '0.65.x', '0.64.x', '0.63.x', '0.62.x', '0.61.x', '0.60.x']
-        node_version: ['18.x', '16.x', '14.x', '12.x', '10.x']
-        jdk_version: ['8', '11']
+        node_version: ['18.x', '16.x', '14.x', '12.x']
+        jdk_version: ['11']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -48,7 +48,6 @@ jobs:
         
       - name: Generate App APK
         run: |
-          export NODE_OPTIONS=--openssl-legacy-provider
           cd $PROJECT_NAME && cd android && ./gradlew assembleRelease --no-daemon
           
       - name: Upload a Build Artifact
