--- a/.github/workflows/rn-build-63-14-8.yml
+++ b/.github/workflows/rn-build-63-14-8.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         rn_version: ['0.63.x']
-        node_version: ['14.x']
+        node_version: ['14.9.1']
         jdk_version: ['8']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
