--- a/.github/workflows/rn-build-olds.yml
+++ b/.github/workflows/rn-build-olds.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
           
       - name: Setup Java JDK   
-      - uses: actions/setup-java@v3
+        uses: actions/setup-java@v3
         with:
           java-version: ${{ matrix.jdk_version }}
       
