--- a/.github/workflows/rn-build-olds.yml
+++ b/.github/workflows/rn-build-olds.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Setup Java JDK   
         uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.jdk_version }}
       
 
