--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,33 +10,18 @@ env:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  android-build:
     # The type of runner that the job will run on
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
+    container: reactnativecommunity/react-native-android
     
     strategy:
       fail-fast: false
       matrix:
         rn_version: ['0.63.x']
-        node_version: ['14.x']
-        jdk_version: ['8']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3.1.1
-        with:
-          # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
-          node-version: ${{ matrix.node_version }}
-          
-      - name: Setup Java JDK   
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: ${{ matrix.jdk_version }}
-      
-
       # Runs a single command using the runners shell
       - name: Create new react native project
         run: npx react-native init $PROJECT_NAME --version ${{ matrix.rn_version }}
