--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rn_version: ['0.63.x']
+        rn_version: ['0.60.x', '0.61.x', '0.62.x', '0.63.x', '0.64.x', '0.65.x', '0.66.x', '0.67.x', '0.68.x']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
