--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 env:
-  PROJECT_NAME: RNGithubAction
+  PROJECT_NAME: RN
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -41,4 +41,4 @@ jobs:
         with:
           # Artifact name
           name: 'build'
-          path: 'RNGithubAction/android/app/build/outputs/apk/release/app-release.apk'
+          path: 'RN/android/app/build/outputs/apk/release/app-release.apk'
