--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 env:
-  PROJECT_NAME: RN
+  PROJECT_NAME: RNGithubAction
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -18,17 +18,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        rn_version: ['0.63.x', '0.64.x']
+        rn_version: ['0.60.x', '0.61.x', '0.62.x', '0.63.x', '0.64.x', '0.65.x', '0.66.x', '0.67.x', '0.68.x']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a single command using the runners shell
       - name: Create new react native project
         run: npx react-native init $PROJECT_NAME --version ${{ matrix.rn_version }}
-      
-      - name: Update metro-react-native-babel-preset
-        if: ${{ matrix.rn_version < '0.63' }}
-        run: cd $PROJECT_NAME && yarn add -D metro-react-native-babel-preset@^0.59
         
       - name: Make Gradlew Executable
         run: cd $PROJECT_NAME && cd android && chmod +x ./gradlew
@@ -41,4 +37,4 @@ jobs:
         with:
           # Artifact name
           name: 'build'
-          path: 'RN/android/app/build/outputs/apk/release/app-release.apk'
+          path: 'RNGithubAction/android/app/build/outputs/apk/release/app-release.apk'
