--- a/.github/workflows/rn-build-olds.yml
+++ b/.github/workflows/rn-build-olds.yml
@@ -1,4 +1,4 @@
-name: RN Github Action
+name: rn-build-old
 
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -18,28 +18,36 @@ jobs:
       fail-fast: false
       matrix:
         rn_version: ['0.63.x']
-        node_version: ['14.x']
-        jdk_version: ['8']
+#         node_version: ['14.x']
+#         jdk_version: ['8']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v3.1.1
-        with:
-          # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
-          node-version: ${{ matrix.node_version }}
+#       - name: Setup Node.js environment
+#         uses: actions/setup-node@v3.1.1
+#         with:
+#           # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
+#           node-version: ${{ matrix.node_version }}
           
-      - name: Setup Java JDK   
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: ${{ matrix.jdk_version }}
+#       - name: Setup Java JDK   
+#         uses: actions/setup-java@v3
+#         with:
+#           distribution: 'zulu'
+#           java-version: ${{ matrix.jdk_version }}
       
 
       # Runs a single command using the runners shell
       - name: Create new react native project
         run: npx react-native init $PROJECT_NAME --version ${{ matrix.rn_version }}
+        
+        # What is node version
+      - name: Create new react native project
+        run: node -v
+        
+        # What is java version
+      - name: Create new react native project
+        run: java --version
         
       - name: Make Gradlew Executable
         run: cd $PROJECT_NAME && cd android && chmod +x ./gradlew
