--- a/.github/workflows/docker-mingc.yml
+++ b/.github/workflows/docker-mingc.yml
@@ -19,6 +19,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a single command using the runners shell
+      - name: Remove react native old cli
+        run: npm remove -g react-native-cli
+        
+      # Runs a single command using the runners shell
       - name: Create new react native project
         run: npx react-native init $PROJECT_NAME --version ${{ matrix.rn_version }}
         
